fix footer's alignment

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 
 /* navigation */
 .nav {
-    padding: 10px 200px;
+    padding: 10px 15%;
     display: flex;
     height: 50px;
     background-color: white;
@@ -34,7 +34,7 @@
 
 /* footer */
 .footer {
-    padding: 10px 200px;
+    padding: 10px 15%;
     display: flex;
     min-height: fit-content;
     height: 300px;
@@ -43,25 +43,16 @@
     align-items: center;
 }
 
-.grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 80px;
-}
-
-.grid-container ul li {
-    font-family: "Markazi Text", serif;
-    font-size: 20px;
-    margin-bottom: 10px;
+.footersection {
+    height: 180px;
 }
 
 .footerheader {
-    color: #495E57;
     font-family: "Markazi Text", serif;
-    font-weight: bold;
     font-size: 22px;
+    color: #495E57;
 }
 
-.grid-container ul li a {
+.footer div p a {
     color: black;
 }
